[package]
name = "actix_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.7", features = ["full"]}
tokio = { version = "1", features = ["full"] }
handlebars = "3.5.5"
rhai = {version = "0.20.1", feature = ["sync", "serde"]}
serde = { version = "1.0", features = ["derive"] }
